--- a/Source/NexumNovus.AppSettings.Json/NexumNovus.AppSettings.Json.csproj
+++ b/Source/NexumNovus.AppSettings.Json/NexumNovus.AppSettings.Json.csproj
@@ -10,4 +10,9 @@
     <PackageTags>nexumnovus;appsettings;json</PackageTags>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="7.0.0" />
+    <PackageReference Include="NexumNovus.AppSettings.Common" Version="0.2.0" />
+  </ItemGroup>
+
 </Project>
