--- a/Tests/NexumNovus.AppSettings.Json.Test/NexumNovus.AppSettings.Json.Test.csproj
+++ b/Tests/NexumNovus.AppSettings.Json.Test/NexumNovus.AppSettings.Json.Test.csproj
@@ -8,4 +8,10 @@
     <ProjectReference Include="..\..\Source\NexumNovus.AppSettings.Json\NexumNovus.AppSettings.Json.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Using Include="FluentAssertions" />
+    <Using Include="Moq" />
+    <Using Include="Xunit" />
+  </ItemGroup>
+
 </Project>
